# VulkanEngine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  build.yml
Engine/: CMakeLists.txt  setup.bat  setup.sh
Engine/engine/models/: cubo.fbx  plano.fbx
Engine/shaders/: pbr.frag
Engine/src/: Components.cpp  Scene.cpp  Scene.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
Engine/src/core/: VulkanCore.cpp  VulkanCore.h  VulkanImGui.cpp  VulkanPipeline.cpp  VulkanSwapChain.cpp
Engine/src/ecs/: Component.h  Entity.cpp  Entity.h  Registry.h  RenderSystem.cpp  RenderSystem.h
Engine/src/ecs/components/: CameraComponent.h  GIzmoComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  RenderComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/src/engine/loaders/: ModelLoader.cpp  ModelLoader.h
Engine/src/managers/: FileManager.cpp  FileManager.h
Engine/src/rendering/: TextureManager.cpp  TextureManager.h
Engine/src/ui/: UIDrawer.cpp  UIDrawer.h
Launcher/: CMakeLists.txt
Launcher/src/: main.cpp  settings.cpp  settings.h
Launcher/ui/: app-window.slint
cmake/: GenerateFontHeader.cmake
engine/models/: cubo.fbx  plano.fbx
shaders/: fragment.frag  pbr.frag  pbr.vert  vertex.vert
src/: Components.cpp  Components.h  DescriptorCache.cpp  DescriptorCache.h  DescriptorSetLayout.h  FileWatcher.h  ImGuiManager.cpp  ImGuiManager.h  RenderPass.h  Scene.cpp  Scene.h  ShaderManager.cpp  ShaderManager.h  Singleton.h  TextureManager.cpp  TextureManager.h  UniformBuffer.h  VulkanMemoryAllocator.cpp  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
src/core/: VulkanCore.cpp  VulkanCore.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanImGui.cpp  VulkanImGui.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTypes.h
src/ecs/: Component.h  Entity.h  Registry.h  RenderSystem.cpp  RenderSystem.h
src/ecs/components/: CameraComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  RenderComponent.h  TransformComponent.h
src/engine/loaders/: ModelLoader.cpp  ModelLoader.h
src/managers/: FileManager.cpp  FileManager.h
src/project/: projectManagment.cpp  projectManagment.h
src/rendering/: Texture.h  TextureManager.cpp
src/ui/: UIDrawer.cpp  UIDrawer.h
